2004-11-30  Sarfraaz Ahmed <asarfraaz@novell.com>

	* Updated the po files

2004-11-30  Sushma Rai <rsushma@novell.com>

	* storage/exchange-account.c (find_passwd_exp_period): Calling
	password expiry warning dialog.
	
	* storage/exchange-account.c (display_passwd_expiry_message)
	(change_passwd_cb): Added new, to display password expiry warning
	dialog, which can be used to invoke change password dialog.

	* storage/exchange-passwd-expiry.glade: Dialog for displaying 
	password expiry warning.

	* storage/Makefile.am: Added glade files exchange-folder-tree.glade
	and exchange-passwd-expiry.glade

	* lib/gctest.c (do_lookup): Finding password expiry period.

2004-11-30  Sarfraaz Ahmed <asarfraaz@novell.com>

        * configure.in : Removed the DEPRECATED symbols. This is for building
        against Gnome 2.9

2004-11-30  Sushma Rai <rsushma@novell.com>

	* storage/e-folder-exchange.c (e_folder_exchange_get_folder_size)
	(e_folder_exchange_save_to_file): Handling return value on error.

	* storage/exchange-folder-size.c (exchange_folder_size_display)
	Fixed a compile time warning.

2004-11-29  Sarfraaz Ahmed <asarfraaz@novell.com>

	* addressbook/e-book-backend-exchange.c 
	(e_book_backend_exchange_get_required_fields): Added new
	* addressbook/e-book-backend-gal.c
	(get_required_fields): Added new
	The above two methods were added for the required_field support by
	Sivaiah.

2004-11-27  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-hierarchy-webdav.c:
	(exchange_hierarchy_webdav_parse_folder): Calling
	exchange_folder_size_update() only if permanenturl is
	not NULL. Fixes the crash while bringing up
	exchange-storage.
	Also fixed couple of compile time warnings.

2004-11-26  Sarfraaz Ahmed <asarfraaz@novell.com>

	* configure.in : Bumped the version to 2.1.1
	* NEWS : Updated
	* storage/e-folder-exchange.c : Fixed some warnings.
	* storage/exchange-folder-size.c : Similar
	* storage/exchange-hierarchy-webdav.c : Similar
	* storage/main.c : Similar
